Thu Jun 28 23:33:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Fix documentation of parameters to
	  INDEX_FREETEXT, and adjust an example to give expected output
	  after recent fix to highlighting.
	* secore/fieldactions.py: Add an option allowing indexing without
	  positional information, and an option allowing indexing with
	  spelling correction.
	* secore/highlight.py,secore/searchconnection_doctest1.txt: Update
	  output of examples to match recent fix to highlighting.

Thu Jun 28 15:26:36 BST 2007  Tom Mortimer <tom@lemurconsulting.com>

	* secore/fieldactions.py: Add stopwording, and an option not to
	  store prefixed terms, to freetext indexing.
	* secore/highlight.py: Fix a bug causing the requested maxlength to
	  be exceeded if the derived blocks were too big.

Fri Jun 08 15:37:21 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,testdata/query_sourcewords.txt: Add source words for
	  generating queries to test with, and list the copyright holders
	  in AUTHORS.
	* perftest/: Add some routines for performing performance tests,
	  and analysing the logs of these tests.
	* perftest/parse_wikipedia/: Add some routines which convert XML
	  dumps of wikipedia data into scriptindex compatible forms.

Fri Jun 08 11:58:54 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Initial import into code.google.com repository.

Wed May 16 20:03:02 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Remove textprocessor.py in favour of using the new TermGenerator
	  stuff in Xapian 1.0.0.  Implement sorting by date or floating
	  point.  Add query_range() method for searching all documents in a
	  given range.

Wed May 16 15:44:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* README: Add a note on the name, and list docutils as a
	  dependency.

Wed May 16 10:27:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>
