@@ -1,3 +1,8 @@
+Fri Jun 29 08:47:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,secore/: Finally, properly implement and
+	  document the spelling correction support.
+
 Thu Jun 28 23:33:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/introduction.rst: Fix documentation of parameters to
